# near-creative-engine

./: Cargo.toml  IMPLEMENTATION_REPORT.md  NEAR_SPECIFIC_README.md  README.md  TECHNICAL_ARCHITECTURE.md  package.json
contracts/cross-chain/: CrossChainDataBridge.sol
contracts/cross-chain-ai/src/: lib.rs
contracts/near/cross-chain-ai/: Cargo.toml
contracts/soulbound-ai-governance/: Cargo.toml
contracts/soulbound-nft/: Cargo_fixed.toml
contracts/src/: lib_fixed.rs
docs/: RUST_SPECIFIC_IMPLEMENTATION_REPORT.md  RUST_SPECIFIC_README.md  RUST_SPECIFIC_TECHNICAL_ARCHITECTURE.md  bitte-protocol-grant-application.md  filecoin-foundation-grant.md  near-foundation-grant.md  solana-foundation-grant.md  web3-foundation-grant.md
near-wasm/: Cargo.toml
near-wasm/src/: lib.rs
scripts/: deploy-near-contracts.sh  deploy-near-real-auto.sh  deploy-near-real-testnet.sh  deploy-near-soulbound.sh  deploy-near-testnet-fixed.sh  deploy-near-testnet-npx.sh  deploy-near-testnet.sh
src/components/: AIBlockchainIntegration.tsx  ComprehensiveNEARCreativeEngine.tsx  CrossChainBridge.tsx  FilecoinAIPanel.tsx  FilecoinStorageIntegration.tsx  FractalBlockchainIntegration.tsx  InteractiveEmotionalNFT.tsx  NEARAIPanel.tsx
src/config/: cross-chain-bridge-config.js  deployed-contracts.js  filecoin-calibration.env  solana-biometric-devnet.env  solana-devnet.env
src/ipfs-integration/: filecoin-storage-config.json  test-creative-data.json
src/mintbase/: nuwe-ai-ml-integration.js
src/near-wasm/: Cargo.toml
src/near-wasm/src/: emotional.rs  fractal_studio.rs  lib.rs  wgsl_studio.rs  (+1 more)
src/pages/: BiometricNFTMinter.tsx  FractalStudio.tsx  SimpleEmotionalFractalStudio.tsx
src/rust-client/: Cargo.toml  test_imports.rs
src/rust-client-wasm/: Cargo.toml
src/rust-client-wasm/src/: lib.rs
src/services/: myNearWalletService.ts
src/solana-program/: Anchor.toml
src/solana-programs/biometric-nft/programs/biometric-nft/: Cargo.toml
src/tests/: AIBlockchainIntegration.test.tsx
src/utils/: BiometricDataGenerator.ts  ai-ml-integration-examples.js  bitte-protocol-ai-enhanced.ts  bitte-protocol-integration.js  cross-chain-ai-integration.js  cross-chain-bridge.js  cross-chain-bridge.ts  filecoin-ai-integration-examples.ts  filecoin-ai-integration.ts  hybrid-ai-architecture.js  hybrid-ai-architecture.test.js  mintbase-ai-integration  near-ai-integration-enhanced.ts  near-ai-integration.ts  near-fractal-ai-integration.ts  real-cross-chain-bridge.js  real-filecoin-storage.js  real-ipfs-storage.js  real-web3storage-manager.js  real-web3storage.js  stabilized-webgpu-pipeline.js  unified-ai-ipfs-hub.ts  unified-wallet-connector.js  web3storage-manager-deprecated.js  web3storage-manager.js
src/wasm-fractal/: Cargo.toml
(+29 files in other folders)
