[package]
name = "nft-rust-client-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM-compatible Rust library for NFT blockchain interactive"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[features]
default = []

[workspace] # Make this package independent of the workspace