[package]
name = "cross-chain-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"