[package]
name = "biometric-nft"
version = "0.1.0"
description = "Biometric Emotional NFT Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "biometric_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"

[dev-dependencies]
anchor-client = "0.29.0"
solana-sdk = "1.16.0"
solana-program-test = "1.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1